[package]
name = "ftp_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
ftp = "3.0.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
dotenv = "0.15.0"
serde = "1.0"
log = "0.4.0"
log4rs = "1.0.0"